fix banner height on smaller screens

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -194,8 +194,12 @@
 		}
 
 		@include breakpoint(small) {
-			height: 2.75em;
+			height: 5.5em;
 			line-height: 2.75em;
+
+			.highlight, .logo, nav {
+				height: 2.75em;
+			}
 
 			.logo {
 				padding: 0 1em;
